# telegram-birthday-notificator

./: .gitignore  Cargo.toml  README.md  config.json  db.db
src/: bot.rs  config.rs  main.rs  user.rs
