[package]
name = "dsba201_bday_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.11.0", features = ["full"]}
chrono = "0.4.19"
rusqlite = "0.25.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
reqwest = "0.11.4"